--- a/src/components/storyItem/storyItem.scss
+++ b/src/components/storyItem/storyItem.scss
@@ -3,6 +3,16 @@
     height: 667px;
     border-radius: 8px;
     overflow: hidden;
+    background: white;
+    transform: scale(.8);
+    pointer-events: none;
+    user-select: none;
+    &.active {
+        transform: scale(1);
+        z-index: 10;
+        pointer-events: initial;
+        user-select: initial;
+    }
 }
 
 .story-item__top-container {
@@ -29,6 +39,8 @@
 }
 
 .content-wrapper {
+    height: 500px;
+    padding: 0 22px;
     border-top: 1px solid #CACACA;
     border-bottom: 1px solid #CACACA;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.051) 100%);
@@ -40,4 +52,32 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 8px;
+}
+
+
+.arrow {
+    position: absolute;
+    top: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    color: var(--grey);
+    border: 2px solid #000;
+    background: #fff;
+    border-radius: 50%;
+    transform: translateY(-50%);
+  
+    &-prev {
+      left: -58px;
+  
+      .icon {
+        transform: rotate(.5turn);
+      }
+    }
+  
+    &-next {
+      right: -58px;
+    }
 }
