--- a/src/components/topline/topline.scss
+++ b/src/components/topline/topline.scss
@@ -1,6 +1,6 @@
 .c-topline {
-    background: #FAFAFA;
-    border-bottom: 1px solid #C6C6C8;
+    background: rgba(0, 0, 0, 0.015);
+    box-shadow: 0px 0.33px 0px rgba(60, 60, 67, 0.29);
     padding: 42px 0 32px;
 }
 
