--- a/src/components/progress/progress.scss
+++ b/src/components/progress/progress.scss
@@ -8,6 +8,7 @@
     &.active {
         .indicator {
             width: 100%;
+            transition: 5s linear;
         }
     }
 }
@@ -19,5 +20,4 @@
     left: 0;
     width: 0;
     background: #31AE54;
-    transition: 5s;
 }
