--- a/src/components/storyItem/storyItem.scss
+++ b/src/components/storyItem/storyItem.scss
@@ -1,12 +1,13 @@
 .story-item-wrapper {
     width: 375px;
-    height: 667px;
+    height: 660px;
     border-radius: 8px;
-    overflow: hidden;
-    background: white;
+    background-color: white;
     transform: scale(.8);
+    transition: all .4s;
     pointer-events: none;
     user-select: none;
+    position: relative;
     &.active {
         transform: scale(1);
         z-index: 10;
@@ -40,7 +41,7 @@
 
 .content-wrapper {
     height: 500px;
-    padding: 0 22px;
+    padding: 22px 22px;
     border-top: 1px solid #CACACA;
     border-bottom: 1px solid #CACACA;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.051) 100%);
@@ -63,21 +64,27 @@
     justify-content: center;
     width: 40px;
     height: 40px;
-    color: var(--grey);
+    color: grey;
     border: 2px solid #000;
     background: #fff;
     border-radius: 50%;
     transform: translateY(-50%);
-  
+}
+
+.btn {
     &-prev {
       left: -58px;
-  
-      .icon {
-        transform: rotate(.5turn);
+      & .icon {
+          transform: rotate(.5turn);
       }
     }
-  
+    
     &-next {
       right: -58px;
     }
+}
+
+.icon {
+    height: 17px;
+    width: 18px;
 }
