--- a/src/components/storyItem/storyItem.scss
+++ b/src/components/storyItem/storyItem.scss
@@ -40,8 +40,10 @@
 }
 
 .content-wrapper {
+    flex: 1;
     height: 500px;
-    padding: 22px 22px;
+    padding: 22px 22px 0px;
+    overflow: hidden;
     border-top: 1px solid #CACACA;
     border-bottom: 1px solid #CACACA;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.051) 100%);
@@ -87,4 +89,11 @@
 .icon {
     height: 17px;
     width: 18px;
+}
+
+.loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
